--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Noto Sans", sans-serif !important;
-  padding: 5px !important;
-  line-height: 1.75 !important;
+  font-family: "Noto Sans", sans-serif;
+  padding: 5px;
+  line-height: 1.75;
 }
