--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,3 +14,19 @@ body {
   padding: 5px;
   line-height: 2;
 }
+
+nav a.page-link {
+  padding-right: 10px;
+}
+
+a.site-title {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+.wrapper {
+  padding: 30px 0;
+}
