--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/anchovydev/anchovydev.github.io/main/assets/images/saturn.png">
-  <title>{{ page.title | default: site.title }}</title>
+  <title>{{ page.title | default: site.title }} | {{ site.title }}</title>
 </head>
