--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,13 @@
 layout: default
 ---
 
+<main>
 <h1>anchovy's website</h1>
 
 <span class="quote"><i>"Nobody exists on purpose. Nobody belongs anywhere. Everybody’s gonna die ... Come watch TV?" - Rick and Morty</i></span>
-
+<br>
 <p>hi there, you've landed on my website.
 <br>
 nothing's really here at the moment.</p>
+  
+</main>
