--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,12 @@ nav {
   float: right;
 }
 
+nav::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .wrapper {
   padding: 30px 0;
 }
