--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 
-{%- if page.title -%}
-  <h1 class="page-heading">{{ page.title }}</h1>
-{%- endif -%}
+<h1 class>{{ site.title }}</h1>
 
 {{ content}}
 
