--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
 
   <body>
     
-    {%- include header.html -%}
+    <header>
+      {%- include header.html -%}
+    </header>
     
     <main>
       {{ content }}
