--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,16 @@
   {%- include head.html -%}
 
   <body>
-    
-    <header>
-      {%- include header.html -%}
-    </header>
-    
-    <main>
-      {{ content }}
+
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
     </main>
+
+    {%- include footer.html -%}
 
   </body>
 
