--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,3 +3,11 @@ layout: default
 ---
 
 <h1>anchovy's website</h1>
+
+<p><i>"Nobody exists on purpose. Nobody belongs anywhere. Everybody’s gonna die ... Come watch TV?" - Morty</i>
+<br>
+woah hi, welcome to my webpage.
+<br>
+nothing's really hear right now.
+<br>
+here's a rickroll: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll</a></p>
