--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,4 +10,4 @@ woah hi, welcome to my webpage.
 <br>
 nothing's really hear right now.
 <br>
-here's a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll.</a></p>
+so instead of actual content, here's a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll.</a></p>
