--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,6 @@ layout: default
 <br>
 woah hi, welcome to my webpage.
 <br>
-nothing's really hear right now.
+nothing's really here right now.
 <br>
 so instead of actual content, here's a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll.</a></p>
