--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,3 +34,13 @@ nav {
 h1 {
   padding: 30px 0 0 0;
 }
+
+footer::before {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.contact {
+  list-style-type: none;
+}
