--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,5 @@
 <footer>
-  <ul class="contact">
-    {% if site.author.name -%}
-      <li>{{ site.author.name }}</li>
-    {% endif -%}
-    {% if site.author.email -%}
-      <li><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-    {%- endif %}
-  </ul>
+  {% if site.author.name -%}
+    made with 💜 by {{ site.author.name }}
+  {% endif -%}
 </footer>
