--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,9 @@
   </script>
    <style>
         img.emoji {
-            width:1.5em;
-            pointer-events: none; 
+          width: 1em;
+          pointer-events: none;
+          offset: 1px 0;
         }
     </style>
 </head>
