--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,16 @@
   </script>
    <style>
         img.emoji {
-          width: 1em;
+          display: inline !important;
+          border: none !important;
+          box-shadow: none !important;
+          height: 1em !important;
+          width: 1em !important;
+          margin: 0 .07em !important;
+          vertical-align: -0.1em !important;
+          background: none !important;
+          padding: 0 !important;
           pointer-events: none;
-          offset: 1px 0;
         }
     </style>
 </head>
