--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,13 +1,16 @@
 ---
 layout: default
 ---
-
+<head>
+  <title>anchovy's website</title?
+</head>
+    
 <h1>anchovy's website</h1>
 
-<p><i>"Nobody exists on purpose. Nobody belongs anywhere. Everybody’s gonna die ... Come watch TV?" - Morty</i>
+<i>"Nobody exists on purpose. Nobody belongs anywhere. Everybody’s gonna die ... Come watch TV?" - Morty</i>
 <br>
 woah hi, welcome to my webpage.
 <br>
 nothing's really here right now.
 <br>
-so instead of actual content, here's a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll.</a></p>
+so instead of actual content, here's a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">rickroll.</a>
