--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <head>
-  <title>anchovy's website</title?
+  <title>anchovy's website</title>
 </head>
     
 <h1>anchovy's website</h1>
