--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,12 @@
   {% if site.description %}
     <meta name="description" content={{ site.description | escape }}>
   {%- endif -%}
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  <link rel="stylesheet" href={{ "/assets/css/style.css" | relative_url }}>
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/anchovydev/anchovydev.github.io/main/assets/images/saturn.png">
-  <title>{{ page.title | default: site.title }} | {{ site.title }}</title>
+  {% if page.title %}
+  <title>{{ page.title }} | {{ site.title }}</title>
+  {%- endif -%}
+  <title>{{ site.title }}</title>
   <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   <script>
         window.onload = function() {      
