--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,19 +1,16 @@
-{% assign provider = site.comments.provider | default: "gisqus" %}
-{% if provider == "giscus" %}
-  <script src="https://giscus.app/client.js"
-        data-repo = {{ giscus.repo }}
-        data-repo-id = {{ giscus.repo-id }}
-        data-category = {{ giscus.category }}
-        data-category-id = {{ giscus.category-id }}
-        data-mapping = {{ giscus.mapping }}
-        data-strict = {{ giscus.strict }}
-        data-reactions-enabled = {{ giscus.reactions-enabled }}
-        data-emit-metadata = {{ giscus.emit-metadata }}
-        data-input-position = {{ giscus.input-position }}
-        data-theme = {{ giscus.theme }}
-        data-lang = {{ giscus.lang }}
-        data-loading = {{ giscus.loading }}
-        crossorigin = {{ giscus.crossorigin }}
+<script src="https://giscus.app/client.js"
+        data-repo="anchovydev/anchovydev.github.io"
+        data-repo-id="R_kgDOIgc8eQ"
+        data-category="chat"
+        data-category-id="DIC_kwDOIgc8ec4CTXua"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
         async>
 </script>
-{%- endif -%}
