--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,11 @@
       {{ content }}
     </main>
     
+    <br>
+    
+    <h1>comments</h1>
+    powered by <a href=https://giscus.app/>giscus</a>
+    
     {% include comments.html %}
     
     {%- include footer.html -%}
