--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,6 +50,6 @@ footer {
   border: none;
 }
 
-.gsc-comments-count em {
+.gsc-comments .gsc-header .gsc-left-header em.color-text-secondary.text-sm {
   display: none !important;
 }
