--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,6 +51,6 @@ footer {
   border: none;
 }
 
-#__next .text-sm {
-  display: none !important;
+#document {
+  font-family: "Noto Sans", sans-serif;
 }
