--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,16 +1,16 @@
 <script src="https://giscus.app/client.js"
-        data-repo="anchovydev/anchovydev.github.io"
-        data-repo-id="R_kgDOIgc8eQ"
-        data-category="chat"
-        data-category-id="DIC_kwDOIgc8ec4CTXua"
-        data-mapping="pathname"
-        data-strict="1"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="light"
-        data-lang="en"
-        data-loading="lazy"
-        crossorigin="anonymous"
+        data-repo = {{ site.giscus.repo }}
+        data-repo-id = "R_kgDOIgc8eQ"
+        data-category = "chat"
+        data-category-id = "DIC_kwDOIgc8ec4CTXua"
+        data-mapping = "pathname"
+        data-strict = "1"
+        data-reactions-enabled = "1"
+        data-emit-metadata = "0"
+        data-input-position = "top"
+        data-theme = "/assets/css/giscus.css"
+        data-lang = "en"
+        data-loading = "lazy"
+        crossorigin = "anonymous"
         async>
 </script>
