--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,16 +1,16 @@
 <script src="https://giscus.app/client.js"
         data-repo = {{ site.giscus.repo }}
-        data-repo-id = "R_kgDOIgc8eQ"
-        data-category = "chat"
-        data-category-id = "DIC_kwDOIgc8ec4CTXua"
-        data-mapping = "pathname"
-        data-strict = "1"
-        data-reactions-enabled = "1"
-        data-emit-metadata = "0"
-        data-input-position = "top"
-        data-theme = "/assets/css/giscus.css"
-        data-lang = "en"
-        data-loading = "lazy"
-        crossorigin = "anonymous"
+        data-repo-id = {{ site.giscus.repo-id }}
+        data-category = {{ site.giscus.category }}
+        data-category-id = {{ site.giscus.category-id }}
+        data-mapping = {{ site.giscus.mapping }}
+        data-strict = {{ site.giscus.strict }}
+        data-reactions-enabled = {{ site.giscus.reactions-enabled }}
+        data-emit-metadata = {{ site.giscus.emit-metadata }}
+        data-input-position = {{ site.giscus.input-position }}
+        data-theme = {{ site.giscus.theme }}
+        data-lang = {{ site.giscus.lang }}
+        data-loading = {{ site.giscus.loading }}
+        crossorigin = {{ site.giscus.crossorigin }}
         async>
 </script>
