PLEASE PLEASE JUST FRICKING WORK

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   {% if site.description %}
     <meta name="description" content={{ site.description | escape }}>
   {%- endif -%}
-  <link rel="stylesheet" href={{ "/assets/css/style.scss" | relative_url }}>
+  <link rel="stylesheet" href="/assets/css/style.scss">
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/anchovydev/anchovydev.github.io/main/assets/images/saturn.png">
   {% if page.title %}
   <title>{{ page.title }} | {{ site.title }}</title>
