--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content={{ site.description | escape }}>
   {%- endif -%}
   <link rel="stylesheet" type="text/css" href={{ "/assets/css/simple.css" | relative_url }}>
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/anchovydev/anchovydev.github.io/main/assets/images/saturn.png">
+  <link rel="icon" type="image/x-icon" href={{ "/assets/images/saturn.png" | relative_url }}>
   {% if page.title %}
   <title>{{ page.title }} | {{ site.title }}</title>
   {%- endif -%}
