--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -23,15 +23,11 @@ a.site-title {
   float: left;
 }
 
-a.site-title:any-link {
-  color: black;
-}
-
 nav {
   float: right;
 }
 
-nav a:any-link {
+header {
   color: black;
 }
 
