--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,13 @@
 {%- assign default_paths = site.pages | map: "path" -%}
 {%- assign page_paths = site.header_pages | default: default_paths -%}
 {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-<a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+<a href="{{ "/" | relative_url }}" style="color: black;">{{ site.title | escape }}</a>
   
 <nav>
   {%- for path in page_paths -%}
     {%- assign my_page = site.pages | where: "path", path | first -%}
       {%- if my_page.title -%}
-        <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+        <a class="page-link" href="{{ my_page.url | relative_url }}" style="color: black;">{{ my_page.title | escape }}</a>
       {%- endif -%}
    {%- endfor -%}
   </nav>
