--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
   {% if site.author.name -%}
-    made with 💜 by {{ site.author.name }}
+    made with 💖 by {{ site.author.name }}
   {% endif -%}
 </footer>
