--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <meta name="author" content={{ site.author.name | escape }}>
   {%- endif -%}
   {% if site.description %}
-    <meta name="description" content={{ page.description | escape }}>
+    <meta name="description" content="{{ page.description | escape }}">
   {%- endif -%}
   <link rel="stylesheet" type="text/css" href={{ "/assets/css/simple.css" | relative_url }}>
   <link rel="icon" type="image/x-icon" href={{ "/assets/images/saturn.png" | relative_url }}>
