--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
   {% if site.description %}
     <meta name="description" content="{{ page.description | escape }}">
   {%- endif -%}
-  <link rel="stylesheet" type="text/css" href={{ "/assets/css/simple.css" | relative_url }}>
-  <link rel="icon" type="image/x-icon" href={{ "/assets/images/saturn.png" | relative_url }}>
+  <link rel="stylesheet" type="text/css" href={{ /assets/css/simple.css | relative_url }}>
+  <link rel="icon" type="image/x-icon" href={{ /assets/images/saturn.png | relative_url }}>
   {% if page.title %}
   <title>{{ page.title }} | {{ site.title }}</title>
   {%- endif -%}
