--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -40,3 +40,18 @@ footer {
   border-top: 1px lightgrey solid;
   padding: 10px;
 }
+
+ul.post-list {
+  list-style: none;
+  margin: 0;
+}
+
+span.post-meta {
+  font-size: 0.875rem;
+  color: grey;
+}
+
+a.post-link {
+  width: fit-content;
+  margin: -10px 0 0 0;
+}
