--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -9,6 +9,10 @@ body {
   line-height: 2;
 }
 
+p {
+  font-size: 1rem;
+}
+
 nav a.page-link {
   padding-right: 10px;
 }
@@ -54,4 +58,5 @@ span.post-meta {
 a.post-link {
   width: fit-content;
   margin: -10px 0 0 0;
+  font-size: 1.5rem;
 }
