--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -48,6 +48,15 @@ footer {
 ul.post-list {
   list-style: none;
   margin: 0;
+  padding: 0;
+}
+
+.post-list > li {
+  margin-bottom: 10px;
+}
+
+.post-list > li > h3 {
+  margin: -10px 0 0 0;
 }
 
 span.post-meta {
@@ -57,6 +66,5 @@ span.post-meta {
 
 a.post-link {
   width: fit-content;
-  margin: -10px 0 0 0;
   font-size: 1.5rem;
 }
