--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -34,6 +34,10 @@ a:visited {
   color: #1756a9;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 header {
   border-bottom: 1px lightgrey solid;
   padding: 10px;
